java-course-2023: Fix warnings, typos